[tool.poetry]
name = "namecheap-certbot-auth"
version = "0.1.0"
description = "Authorization for namecheap"
authors = ["AJ Slater <aj@slater.net>"]
license = "GPL 3.0"

[tool.poetry.scripts]
main = "lexicon_auth:main"

[tool.poetry.dependencies]
python = "^3.8"
dns-lexicon = { extras = ["namecheap"], version = "^3.7" }
PySocks = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^4.0.1"
flake8-black = "^0.3"
flake8-bugbear = "^22.3"
flake8-docstrings = "^1.5"
pep8-naming = "^0.12"
radon = "^5.1"
isort = "^5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "/(.git|__pycache__|.pytest_cache|.venv)/"
