[tool.poetry]
name = "namecheap-certbot-auth"
version = "0.1.0"
description = "Authorization for namecheap"
authors = ["AJ Slater <aj@slater.net>"]
license = "GPL 3.0"

[tool.poetry.scripts]
main = "lexicon_auth:main"

[tool.poetry.dependencies]
python = "^3.8"
dns-lexicon = { extras = ["namecheap"], version = "^3.9" }
PySocks = "^1.7.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
codespell = "^2.1.0"
eradicate = "^2.1.0"
flake8-black = "^0.3"
flake8-bugbear = "^22.3"
flake8-docstrings = "^1.5"
isort = "^5.10"
# flake8-eradicate = "^1.2.1"
pep8-naming = "^0.13"
pyright = "^1.1.234"
radon = "^5.1"
vulture = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
# most options must be on the command line
exclude_dirs = ["./.venv", "./node_modules", "./__pycache__"]

[tool.black]
exclude = "/(.git|.pytest_cache|.venv|__pycache__|dist|node_modules)/"

[tool.isort]
profile = "black"
atomic = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
skip = ".git,.venv,__pycache__,dist,node_modules"
color_output = true

[tool.pyright]
exclude = [
  "**/__pycache__",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".venv",
  "poetry.lock",
]
useLibraryCodeForTypes = true
reportMissingImports = true
reportImportCycles = true

[tool.vulture]
exclude = [
  ".git/",
  ".pytest_cache/",
  ".venv/",
  "*__pycache__*",
  "codex/static_root/",
  "dist/",
  "node_modules/",
]
min_confidence = 61
sort_by_size = true
